--- a/docs/rapport.tex
+++ b/docs/rapport.tex
@@ -28,7 +28,7 @@
       \textsc{\Large Projet ROS 4.1}\\[1.5cm]
 
       % Title
-      { \huge \bfseries Fractales : optimisation et visite virtuelle\\[0.4cm] }
+      { \huge \bfseries ROS : implémentation du suivi de ligne sur une voiture à l'échelle 1/10ème\\[0.4cm] }
       \vfill
 
       \begin{figure}[H]
@@ -85,7 +85,7 @@ Lorem ipsum dolor sit amet
 \subsubsection{Traitement d'image}
 Lorem ipsum dolor sit amet
 
-\subsubsection{Controlleur}
+\subsubsection{Contrôleur}
 Lorem ipsum dolor sit amet
 
 \subsubsection{Traitement d'image}
