--- a/docs/rapport.tex
+++ b/docs/rapport.tex
@@ -32,7 +32,7 @@
       \vfill
 
       \begin{figure}[H]
-        \hfill \includegraphics[scale=0.6]{logoROS.jpg} \hspace*{\fill}
+        \hfill \includegraphics[scale=0.6]{img/logoROS.jpg} \hspace*{\fill}
       \end{figure}
 
       \vfill
@@ -64,7 +64,32 @@
 
 \section{Introduction}
 \subsection{Le cahier des charges}
-dolor sit amet
+
+      \begin{figure}[H]
+      \begin{center}
+        \hfill \includegraphics[scale=0.6]{img/Cahier des charges.jpg} \hspace*{\fill}
+        \caption[le titre]{Cahier des charges}
+        \label{monlabel}
+      \end{center}
+      \end{figure}
+
+      \begin{figure}[H]
+      \begin{center}
+        \hfill \includegraphics[scale=0.6]{img/Diagramme pieuvre.jpg} \hspace*{\fill}
+        \caption[le titre]{Diagramme pieuvre}
+        \label{monlabel}
+      \end{center}
+      \end{figure}
+
+      \begin{figure}[H]
+      \begin{center}
+        \hfill \includegraphics[scale=0.6]{img/Architecture Logicielle_Matérielle.png} \hspace*{\fill}
+        \caption[le titre]{Architecture Logicielle_Matérielle}
+        \label{monlabel}
+      \end{center}
+      \end{figure}
+
+
 \subsection{Les pistes envisagées}
 Lorem ipsum dolor sit amet
 
