--- a/docs/rapport.tex
+++ b/docs/rapport.tex
@@ -67,22 +67,22 @@
 
       \begin{figure}[H]
       \begin{center}
-        \hfill \includegraphics[scale=0.6]{img/Cahier des charges.jpg} \hspace*{\fill}
-        \caption[le titre]{Cahier des charges}
+        \hfill \includegraphics[scale=0.6]{img/Cahier_des_charges.jpg} \hspace*{\fill}
+        \caption{Cahier des charges}
       \end{center}
       \end{figure}
 
       \begin{figure}[H]
       \begin{center}
-        \hfill \includegraphics[scale=0.6]{img/Diagramme pieuvre.jpg} \hspace*{\fill}
-        \caption[le titre]{Diagramme pieuvre}
+        \hfill \includegraphics[scale=0.6]{img/Diagramme_pieuvre.jpg} \hspace*{\fill}
+        \caption{Diagramme pieuvre}
       \end{center}
       \end{figure}
 
       \begin{figure}[H]
       \begin{center}
-        \hfill \includegraphics[scale=0.6]{img/Architecture Logicielle_Matérielle.png} \hspace*{\fill}
-        \caption[le titre]{Architecture Logicielle_Matérielle}
+        \hfill \includegraphics[scale=0.6]{img/Architecture_Logicielle_Materielle.png} \hspace*{\fill}
+        \caption{Architecture Logicielle Matérielle}
       \end{center}
       \end{figure}
 
