--- a/docs/rapport_final/LaCJC_ROS.tex
+++ b/docs/rapport_final/LaCJC_ROS.tex
@@ -12,6 +12,7 @@
 \usepackage{lmodern}
 \usepackage{enumitem}
 \usepackage{subcaption}
+\usepackage{hyperref}
 % pour charger des images
 \usepackage{graphicx}
 % répertoire dans lequel trouver les images
@@ -151,8 +152,6 @@ Sed sed porttitor risus. Curabitur elit erat, aliquet non orci et, lacinia egest
 --> Mettre les résultats obtenues + lien vers vidéo !
 
 \section{Perspectives et améliorations}
-Sed sed porttitor risus. Curabitur elit erat, aliquet non orci et, lacinia egestas libero. Suspendisse tristique diam eu efficitur tincidunt. Praesent rhoncus venenatis sapien, nec efficitur elit mattis et. Duis nec felis convallis nulla semper gravida a sit amet magna. Ut enim sapien, vehicula vel ultricies quis, pharetra vitae nunc. In hac habitasse platea dictumst.\\
-
 --> Mettre toutes les améliorations possibles (Docker)
 
 \section*{Conclusion}
@@ -160,10 +159,14 @@ Sed sed porttitor risus. Curabitur elit erat, aliquet non orci et, lacinia egest
 Lorem ipsum dolor sit amet
 coming Soon !!
 
-\section*{Annexe1 : Installation ROS sur Raspberry}
+\section*{Annexe1 : Raspberry comme ordinateur de bord}
 \addcontentsline{toc}{chapter}{Annexe1}
-Lorem ipsum dolor sit amet
-coming Soon !!
+
+Nous avons choisi d'installer Raspbian sur notre raspberry, cela nous permet d'avoir un accès simple à la caméra, cependant l'installation de ROS est un peu plus longue, car il faut recompiler les sources.
+
+Pour installer ROS sur notre raspberry pi 3 nous avons suivi la documentation officielle :  \url{http://wiki.ros.org/ROSberryPi/Installing%20ROS%20Kinetic%20on%20the%20Raspberry%20Pi}
+
+
 
 \section*{Annexe2 : Installation des librairies}
 \addcontentsline{toc}{chapter}{Annexe2}
