--- a/docs/rapport_final/LaCJC_ROS.tex
+++ b/docs/rapport_final/LaCJC_ROS.tex
@@ -45,15 +45,11 @@
 \addcontentsline{toc}{chapter}{Introduction}
 Ce projet s'inscrit dans le cadre des enseignements de l'\textsc{ENSTA Bretagne} dispensés aux élèves de deuxième année de la filière \textit{Robotique Autonome} au sein de l'U.E 4.1 : \textit{Middleware}.\\
 
-Sed sed porttitor risus. Curabitur elit erat, aliquet non orci et, lacinia egestas libero. Suspendisse tristique diam eu efficitur tincidunt. Praesent rhoncus venenatis sapien, nec efficitur elit mattis et. Duis nec felis convallis nulla semper gravida a sit amet magna. Ut enim sapien, vehicula vel ultricies quis, pharetra vitae nunc. In hac habitasse platea dictumst.\\
-
-Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque ac diam vulputate, dictum turpis ac, mattis ligula. Maecenas ornare, metus a fringilla vestibulum, leo ex pellentesque magna, vel lobortis elit est ac magna. Mauris porta consequat lorem, quis tristique mauris porttitor sed. Nam quam ipsum, placerat vitae mi sed, mattis accumsan tortor.\\
+L'objectif est d'utiliser des connaissances acquises au long de l'année pour réaliser un projet robotique concret. Ce projet permet de toucher à de nombreux domaines : CAO et conception mécanique, éléctronique, OS, réseau, conception logiciel, OpenCV... De plus, travailler sur un même code en groupe  n'est pas évident, il est donc important de s'y former.
 
 \section*{Abstract}
 \addcontentsline{toc}{chapter}{Abstract}
-Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque ac diam vulputate, dictum turpis ac, mattis ligula. Maecenas ornare, metus a fringilla vestibulum, leo ex pellentesque magna, vel lobortis elit est ac magna. Mauris porta consequat lorem, quis tristique mauris porttitor sed. Nam quam ipsum, placerat vitae mi sed, mattis accumsan tortor.\\
-
-Sed sed porttitor risus. Curabitur elit erat, aliquet non orci et, lacinia egestas libero. Suspendisse tristique diam eu efficitur tincidunt. Praesent rhoncus venenatis sapien, nec efficitur elit mattis et. Duis nec felis convallis nulla semper gravida a sit amet magna. Ut enim sapien, vehicula vel ultricies quis, pharetra vitae nunc. In hac habitasse platea dictumst.
+In this article presents the realisation of an autonaumous 1:10 scale car. We will particularly talk about the software implementation. We have achied our goal using a rpi board and a camera and OpenCV to process images. ROS is used to have a modular code.
 
 \pagebreak
 
@@ -96,7 +92,8 @@ Compte tenue de l'évolution de la pandémie du \textit{Covid-19}, et suite à l
 
 \section{Support matériel}
 \subsection{Présentation de la voiture}
-Sed sed porttitor risus. Curabitur elit erat, aliquet non orci et, lacinia egestas libero. Suspendisse tristique diam eu efficitur tincidunt. Praesent rhoncus venenatis sapien, nec efficitur elit mattis et. Duis nec felis convallis nulla semper gravida a sit amet magna. Ut enim sapien, vehicula vel ultricies quis, pharetra vitae nunc. In hac habitasse platea dictumst.\\
+
+La voiture utilisé est une voiture radio-commandé d'echelle 1:10. Elle a une architecture très basique
 
 --> Expliquer vite fait la construction de la voiture + photo + schéma
 
